Fix settings paging limit shifting page

--- a/Development/src/index.css
+++ b/Development/src/index.css
@@ -1,8 +1,11 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  overflow-y:scroll;
 }
 
 .icon {
